[gd_scene load_steps=11 format=2]

[ext_resource path="res://source/ai/steering/SteeringTest.gd" type="Script" id=1]
[ext_resource path="res://source/debug/DebugOverlay.tscn" type="PackedScene" id=2]
[ext_resource path="res://source/Platform.tscn" type="PackedScene" id=3]
[ext_resource path="res://source/Player.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/png/Sprite.png" type="Texture" id=5]
[ext_resource path="res://BebasNeue.otf" type="DynamicFontData" id=6]
[ext_resource path="res://source/BoxWall.tscn" type="PackedScene" id=7]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 5, 5 )

[sub_resource type="DynamicFont" id=2]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 25
use_mipmaps = false
use_filter = false
font_data = ExtResource( 6 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="SteeringTest" type="Node2D"]

script = ExtResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="DebugOverlay" parent="." index="0" instance=ExtResource( 2 )]

mouse_default_cursor_shape = 0
debug_crown = false
enable_slo_mo = true

[node name="Platform" parent="." index="1" instance=ExtResource( 3 )]

position = Vector2( 722, 262 )
scale = Vector2( 2, 1 )

[node name="Platform2" parent="." index="2" instance=ExtResource( 3 )]

position = Vector2( 722, 372 )
scale = Vector2( 2, 1 )

[node name="TileMap" type="TileMap" parent="." index="3"]

mode = 0
tile_set = null
cell_size = Vector2( 64, 64 )
cell_quadrant_size = 16
cell_custom_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
cell_half_offset = 2
cell_tile_origin = 0
cell_y_sort = true
cell_clip_uv = false
collision_use_kinematic = false
collision_friction = 1.0
collision_bounce = 0.0
collision_layer = 1
collision_mask = 1
occluder_light_mask = 1
format = 1
tile_data = PoolIntArray(  )
_sections_unfolded = [ "Cell" ]

[node name="TestSubject" parent="TileMap" index="0" instance=ExtResource( 4 )]

position = Vector2( 322, 382 )

[node name="ControlSubject" parent="TileMap" index="1" instance=ExtResource( 4 )]

position = Vector2( 322, 272 )

[node name="Target" type="StaticBody2D" parent="." index="4"]

editor/display_folded = true
position = Vector2( 720, 370 )
input_pickable = false
collision_layer = 1
collision_mask = 0
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
friction = 1.0
bounce = 0.0
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="Target" index="0"]

scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="Shape" type="CollisionShape2D" parent="Target" index="1"]

shape = SubResource( 1 )

[node name="Container" type="VBoxContainer" parent="." index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 20.0
margin_top = 310.0
margin_right = 196.0
margin_bottom = 526.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
alignment = 0
_sections_unfolded = [ "Rect", "Size Flags" ]
__meta__ = {
"_edit_group_": true
}

[node name="Seek" type="CheckButton" parent="Container" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 176.0
margin_bottom = 40.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Seek             "
flat = false
align = 0
_sections_unfolded = [ "Size Flags", "custom_constants", "custom_fonts" ]

[node name="Arrive" type="CheckButton" parent="Container" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 44.0
margin_right = 176.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Arrive         "
flat = false
align = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="Flee" type="CheckButton" parent="Container" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 88.0
margin_right = 176.0
margin_bottom = 128.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Flee              "
flat = false
align = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="Pursuit" type="CheckButton" parent="Container" index="3"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 132.0
margin_right = 176.0
margin_bottom = 172.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Pursuit       "
flat = false
align = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="Separation" type="CheckButton" parent="Container" index="4"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 176.0
margin_right = 176.0
margin_bottom = 216.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_fonts/font = SubResource( 2 )
toggle_mode = true
enabled_focus_mode = 2
shortcut = null
group = null
text = "Separation "
flat = false
align = 0
_sections_unfolded = [ "custom_fonts" ]

[node name="Label" type="Label" parent="." index="6"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 228.0
margin_top = 426.0
margin_right = 507.0
margin_bottom = 457.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 3 )
text = "Right Click to Set Target Position"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="BoxWall" parent="." index="7" instance=ExtResource( 7 )]

[connection signal="toggled" from="Container/Seek" to="." method="_on_Behavior_toggled" binds= [ "Seek" ]]

[connection signal="toggled" from="Container/Arrive" to="." method="_on_Behavior_toggled" binds= [ "Arrive" ]]

[connection signal="toggled" from="Container/Flee" to="." method="_on_Behavior_toggled" binds= [ "Flee" ]]

[connection signal="toggled" from="Container/Pursuit" to="." method="_on_Pursuit_toggled"]

[connection signal="toggled" from="Container/Separation" to="." method="_on_Behavior_toggled" binds= [ "Separation" ]]


